--- a/templates/main.css
+++ b/templates/main.css
@@ -4970,9 +4970,13 @@ button.Clipboard.clickTxt:active {
     background-color: rgba(255, 255, 255, 0.8);
 }
 
+.button-35.LASO:hover {
+    box-shadow: var(--AMBlue) 0 0 0 0.1em, transparent 0 0 0 0;
+    color: var(--);
+    background-color: rgba(255, 255, 255, 0.8);
+}
 
-
-.button-35.WS:hover {
+.button-35.BYP:hover {
     box-shadow: var(--WS-Blue) 0 0 0 0.1em, transparent 0 0 0 0;
     color: var(--WS-Blue);
     background-color: rgba(255, 255, 255, 0.8);
