--- a/templates/shared/block_cardNoPassword.ejs
+++ b/templates/shared/block_cardNoPassword.ejs
@@ -3,7 +3,7 @@
     <a class="no-hover-effect" href="<%= cardNoPwURL%>">
       <div class="">
         <div class="<%= hoverBorderColor %> elementCard float cardBorder borderRadiusS shadowBoxLt">
-          <img src="<%= cardNoPwImgURL%>" alt="vickywang.me">
+          <img src="<%= cardNoPwImgURL%>" alt="<%= cardNoPwTitle %>">
           <div class="element">
             <div class="element">
               <h3 class="arrCard" data-aos="fade-up"><strong><%= cardNoPwTitle %></strong></h3>
