--- a/templates/about/index.ejs
+++ b/templates/about/index.ejs
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
 <!--Head-->
-<%- include('../shared/head', {SEO:true, Title:'Professional Background and Interests - Vicky Wang', 
+<%- include(`${templatePath}/shared/head`, {SEO:true, Title:'Professional Background and Interests - Vicky Wang', 
   description:'Vicky W. specializes in UX Design for B2B SaaS and consumer apps, expertly transforming complex challenges into user-friendly solutions.', 
-  pageURL:'/about', thumbnailImgURL: 'vickywang_web.png'
+  pageURL:'about', thumbnailImgURL: 'vickywang_web.png'
   }) %>
 <!--Head-->
 
