--- a/templates/appointa/index.ejs
+++ b/templates/appointa/index.ejs
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <!--Head-->
-<%- include('../shared/head', {
+<%- include(`${templatePath}/shared/head`, {
   SEO:true, Title:'Efficient Interview Scheduling Solution for Recruiters | Vicky Wang UX Case Study', 
   description:`Discover Vicky Wang's innovative UX case study on streamlining interview scheduling for recruiters, hiring managers, and candidates.`, 
-  pageURL:'', thumbnailImgURL: 'https://vickywang.me/projectImages/Cover_APPOINTA.png'
+  pageURL:'appointa', thumbnailImgURL: 'https://vickywang.me/projectImages/Cover_APPOINTA.png'
   }) %>
 <!--Head-->
 
