--- a/templates/architecture/LACAMA/index.ejs
+++ b/templates/architecture/LACAMA/index.ejs
@@ -1,133 +1,16 @@
 <html>
-
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="title" content="Museum Design & Cultural Spaces by Vicky Wang">
-
-  <link rel="canonical" href="https://vickywang.me/architecture/LACAMA/">
-  <title>Museum Design & Cultural Spaces by Vicky Wang</title>
-  <meta name="author" content="Vicky W.">
-  <meta name="description"
-    content="Explore the LACAMA Project by Vicky Wang, redefining museum design and cultural spaces. A blend of architectural brilliance and cultural appreciation.">
-  <!-- Open Graph / Facebook -->
-  <meta property="og:locale" content="en_US">
-  <meta property="og:type" content="website">
-  <meta property="og:title" content="Museum Design & Cultural Spaces by Vicky Wang">
-  <meta property="og:description"
-    content="Vicky W. specializes in UX Design for B2B SaaS and consumer apps, expertly transforming complex challenges into user-friendly solutions.">
-  <meta property="og:url" content="https://vickywang.me/architecture/LACAMA">
-  <meta property="og:site_name" content="Vicky's Website">
-  <meta property="og:image" content="https://s3.us-west-1.amazonaws.com/vickywang.me/Thumbnails/vickywang_web.png">
-
-  <!-- Twitter -->
-  <meta property="twitter:card" content="summary_large_image">
-  <meta property="twitter:url" content="https://vickywang.me/architecture/LACAMA">
-  <meta property="twitter:title" content="Museum Design & Cultural Spaces by Vicky Wang">
-  <meta property="twitter:description"
-    content="Vicky W. specializes in UX Design for B2B SaaS and consumer apps, expertly transforming complex challenges into user-friendly solutions.">
-  <meta property="twitter:image" content="https://s3.us-west-1.amazonaws.com/vickywang.me/Thumbnails/vickywang_web.png">
-
-  <!-- favicon -->
-
-  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-  <link rel="manifest" href="/site.webmanifest">
-
-
-
-  <!-- Google Font Preconnect-->
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <!-- Google Font Preconnect-->
-  <link
-    href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap"
-    rel="stylesheet">
-  <!--sitewide font-family: 'Lato', sans-serif; -->
-  <link href="https://fonts.googleapis.com/css2?family=Caveat+Brush&family=Caveat:wght@400;500;600;700&display=swap"
-    rel="stylesheet">
-  <!--handwriting -  font-family: 'Caveat', sans-serif; -->
-  <!--handwriting -  font-family: 'Caveat Brush', sans-serif; -->
-
-  <link href="https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap" rel="stylesheet">
-  <!--handwriting font-family: 'Indie Flower'; -->
-
-  <link href="https://fonts.googleapis.com/css2?family=Gloria+Hallelujah&display=swap" rel="stylesheet">
-  <!--handwriting font-family: 'Gloria Hallelujah';  | Hello font|-->
-
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/4.1.1/crypto-js.min.js"
-    integrity="sha512-E8QSvWZ0eCLGk4km3hxSsNmGWbLtSCSUcewDQPQWZF6pEU8GlT8a5fF32wOl1i8ftdMhssTrF/OhyGWwonTcXA=="
-    crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-  <!-- crypto js -->
-  <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-  <!--jQuery-->
-
-  <!--aos-->
-  <script type="text/javascript" src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-  <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-
-
-  <!-- google analytics-->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-E8YXDWJST2"></script>
-  <!-- Global site tag (gtag.js) - Google Analytics -->
-  <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag() { dataLayer.push(arguments); }
-    gtag('js', new Date());
-
-    gtag('config', 'G-E8YXDWJST2');
-  </script>
-
-
-
-
-
-
-  <link rel="stylesheet" href="../../main.css">
-  <script type="text/javascript" src="../../scripts.js"></script>
-</head>
-
+  <%- include(`${templatePath}/shared/head`, {SEO:true, Title:' A Fusion of Culture and Modern Architecture by Vicky Wang', 
+  description:`'an architectural endeavor that harmoniously blends cultural elements with contemporary design. This project stands as a testament to the integration of traditional motifs and modern architectural principles, creating a space that is both culturally rich and aesthetically modern.`, 
+  pageURL:'architecture/LACAMA', thumbnailImgURL: 'vickywang_web.png'
+  }) %>
+<!--Head-->
 
 <body>
-  <!--progressBarScroll-->
-  <div class="progressContainer">
-    <div class="progress-container">
-      <div class="progress-bar" id="progressBar"></div>
-    </div>
-  </div>
-  <!--progressBarScroll-->
-  <!-- header -->
-  <header>
-    <nav class="header" id="header">
-      <div class="backgroundColorNav">
-        <a href="http://vickywang.me/"><img class="logo pointer" src="../../icon/LOGO.svg" alt="VW"
-            title="vickywang.me"></a>
-        <div class="navbar">
-          <ul class="nav-menu">
-            <li class="nav-item inactive marginZero"><a href="/" class="nav-link box">PROJECT</a>
-            </li>
-            <li class="nav-item active activeNav marginZero"><a href="/architecture"
-                class="nav-link box">ARCHITECTURE</a>
-            </li>
-            <li class="nav-item inactive marginZero"><a href="/photography" class="nav-link box">PHOTOGRAPHY</a>
-            </li>
-            <li class="nav-item inactive marginZero"><a href="/about" class="nav-link box ">ABOUT</a>
-            </li>
-          </ul>
-        </div>
-        <div class="hamburger">
-          <span class="bar"></span>
-          <span class="bar"></span>
-          <span class="bar"></span>
-        </div>
-      </div>
-    </nav>
-  </header>
-  <!-- header -->
-
+  <%- include(`${templatePath}/shared/progressBar`) %>
+  <%- include(`${templatePath}/shared/block_nav_header`, {type:'main', currentPage: 'ARCHITECTURE' }) %>
   <div class="blankHL"></div>
+
+
   <!-- cover -->
   <div class="wrapper">
     <div class="Grid Grid--gutters Grid--cols-2 Grid--center">
@@ -159,11 +42,8 @@
   <hr>
   <div class="blankHM"></div>
 
-  <div class="wrapper">
-    <div class="element">
-      <p class="tArrow">Problem Cloud <img class="seArrow" src="../../icon/arrow-se.svg" alt="icon arrow"></p>
-    </div>
-  </div>
+
+  <%- include(`${templatePath}/shared/comp_content_subtitle_arrow`, {message: 'The Problem Cloud' }) %>
 
   <div class="blankHS"></div>
   <!-- problem cloud -->
@@ -212,12 +92,8 @@
   <div class="blankHM"></div>
   <hr>
   <div class="blankHM"></div>
+  <%- include(`${templatePath}/shared/comp_content_subtitle_arrow`, {message: 'The Cloud' }) %>
 
-  <div class="wrapper">
-    <div class="element">
-      <p class="tArrow">The Cloud <img class="seArrow" src="../../icon/arrow-se.svg" alt="icon arrow"></p>
-    </div>
-  </div>
 
   <div class="blankHS"></div>
   <!-- the cloud -->
@@ -299,12 +175,9 @@
   <div class="blankHM"></div>
   <hr>
   <div class="blankHM"></div>
+  <%- include(`${templatePath}/shared/comp_content_subtitle_arrow`, {message: 'Color & Layers' }) %>
 
-  <div class="wrapper">
-    <div class="element">
-      <p class="tArrow"> COLOR & LAYERS <img class="seArrow" src="../../icon/arrow-se.svg" alt="icon arrow"></p>
-    </div>
-  </div>
+
   <div class="blankHS"></div>
   <!-- CaseStudy1-->
   <div class="wrapper">
@@ -328,15 +201,9 @@
   <div class="blankHM"></div>
   <hr>
   <div class="blankHM"></div>
+  <%- include(`${templatePath}/shared/comp_content_subtitle_arrow`, {message: 'Boxes' }) %>
 
-  <!--Arrow-->
-  <div class="wrapper">
-    <div class="element">
-      <p class="tArrow"> Boxes <img class="seArrow" src="../../icon/arrow-se.svg" alt="icon arrow"></p>
-    </div>
-  </div>
-  <div class="blankHS"></div>
-  <!--render -->
+
   <div class="wrapper">
     <div class="Grid Grid--gutters Grid--cols-2 Grid--center">
       <div class="Grid-cell">
@@ -359,12 +226,9 @@
   <div class="blankHM"></div>
   <hr>
   <div class="blankHM"></div>
+  <%- include(`${templatePath}/shared/comp_content_subtitle_arrow`, {message: 'Site & City' }) %>
 
-  <div class="wrapper">
-    <div class="element">
-      <p class="tArrow"> Site & City <img class="seArrow" src="../../icon/arrow-se.svg" alt="icon arrow"></p>
-    </div>
-  </div>
+
   <!--Arrow-->
   <div class="blankHS"></div>
 
@@ -457,14 +321,8 @@
   <div class="blankHM"></div>
   <hr>
   <div class="blankHM"></div>
-  <!--Arrow-->
+  <%- include(`${templatePath}/shared/comp_content_subtitle_arrow`, {message: 'Plans' }) %>
 
-  <div class="wrapper">
-    <div class="element">
-      <p class="tArrow"> Plans <img class="seArrow" src="../../icon/arrow-se.svg" alt="icon arrow"></p>
-    </div>
-  </div>
-  <!--Arrow-->
   <!-- site plan -->
   <div class="wrapper">
     <div class="Grid Grid--gutters Grid--cols-2 Grid--center">
@@ -556,14 +414,9 @@
   <div class="blankHM"></div>
   <hr>
   <div class="blankHM"></div>
-  <!--Arrow-->
+  <%- include(`${templatePath}/shared/comp_content_subtitle_arrow`, {message: 'Sections & Elevations' }) %>
 
-  <div class="wrapper">
-    <div class="element">
-      <p class="tArrow"> Sections & Elevations <img class="seArrow" src="../../icon/arrow-se.svg" alt="icon arrow"></p>
-    </div>
-  </div>
-  <!--Arrow-->
+
   <div class="blankHS"></div>
   <!--Elevations-->
   <div class="wrapper">
@@ -598,158 +451,22 @@
     </div>
   </div>
   <!--Elevations-->
-  <div class="blankHXL"></div>
-  <p class="tTQ centerHorz" data-aos="fade-up">Thanks for your time and have a good day! </p>
-  <p class="textM centerHorz" data-aos="fade-up">please email me for professional projects</p>
-  <div class="blank-lineheight-s"></div>
-  <div class="blankHXL"></div>
 
 
 
 
+  <!-- Shared across the platform -->
+  <%- include(`${templatePath}/shared/comp_content_subtitle_arrow`, {message: 'Skills & Experiences' }) %>
+  <%- include(`${templatePath}/shared/comp_tagCloud`) %>
+  <%- include(`${templatePath}/shared/comp_closingMessage`, { version: 'addMessage', message: `Thank You for Visiting! please <a class="textUnderline" href="mailto:vickyw.design@gmail.com">email</a> me
+  about professional projects.`}) %>
 
 
 
+  <%- include(`${templatePath}/shared/comp_backTop`) %>
+  <%- include(`${templatePath}/shared/block_nav_footer`) %>
+  <!-- Shared across the platform -->
 
-
-  <!--body-->
-
-  <!--back to top-->
-  <button id="myBtn" title="Back to top">
-    <div id="dad">
-      <div id="bro">
-        <img id="bottom-arrow" class="" src="../../icon/arrow-top.svg" alt="back to top">
-      </div>
-      <div id="sis">
-        <h4>TOP</h4>
-      </div>
-    </div>
-  </button>
-  <!--back to top-->
-
-
-  <!--footer-->
-  <footer class="GreyBg100">
-
-    <div class="blankHS"></div>
-    <div class="wrapper">
-      <div class="element">
-
-        <div class="Grid Grid--gutters Grid--1of3">
-          <div class="Grid-cell">
-
-            <a href="/" class=""><img class="widthXXS" src="../../icon/LOGOtxt.svg" alt="VW" title="vickywang.me"></a>
-            <div class="blankHXS"></div>
-
-            <div class="Grid Grid--gutters">
-              <div class="ClipboardBoxIconOnly">
-                <button class="ClipboardIconOnly">
-                  <img title="Copy Email Address to Clipboard" class="iconS hoverGrey300 paddingS borderRadiusMax"
-                    title="Copy to Clipboard" src="../../icon/mail.svg" alt="LinkedIn">
-                  <p class="clickIconCopy">vickyw.design@gmail.com</p>
-                </button>
-              </div>
-              <a target="_blank" href="https://www.linkedin.com/in/vicky-wyq/" title="LinkedIn">
-                <img class="iconS hoverGrey300 paddingS borderRadiusMax" src="../../icon/in.svg" alt="LinkedIn">
-              </a>
-
-              <a target="_blank" href="https://github.com/vicky-wyq">
-                <img class="iconS hoverGrey300 paddingS borderRadiusMax" src="../../icon/git.svg" alt="GitHub"
-                  title="GitHub">
-              </a>
-
-              <a target="_blank" href="https://codepen.io/vicky-wyq" title="CodePen">
-                <img class="iconS hoverGrey300 paddingS borderRadiusMax" src="../../icon/Codepen.svg" alt="CodePen">
-              </a>
-
-              <a target="_blank" href="https://www.instagram.com/vw_yiqi/">
-                <img class="iconS hoverGrey300 paddingS borderRadiusMax" src="../../icon/ins.svg" alt="Instagram"
-                  title="Instagram">
-              </a>
-            </div>
-            <div class="blankHXS"></div>
-          </div>
-          <div class="Grid-cell">
-            <div class="Grid Grid--gutters Grid--cols-6">
-              <div class="Grid-cell">
-                <h5> <strong> Project </strong> </h5>
-                <div class="blankHXXS"></div>
-                <a href="/glorify/">
-                  <h6 class="fontWeight400"> Glorify</h6>
-                </a>
-
-
-                <h6>Elevating Community Involvement</h6>
-                <div class="blankHXXS"></div>
-                <a href="/appointa/">
-                  <h6 class="fontWeight400"> APPOINTA</h6>
-
-                </a>
-                <h6>Simplifying Interview Coordination</h6>
-                <div class="blankHXXS"></div>
-                <a href="/seer/">
-                  <h6 class="fontWeight400">SEER</h6>
-
-                </a>
-                <h6>Empowering Brand Managers with Insights</h6>
-              </div>
-
-              <div class="Grid-cell">
-                <h5> <strong> Service </strong> </h5>
-                <div class="blankHXXS"></div>
-
-                <a href="/">
-                  <h6 class="fontWeight400">UX/UI Design</h6>
-                </a>
-                <h6>Creating Intuitive User Experiences</h6>
-                <div class="blankHXXS"></div>
-
-                <a href="/">
-                  <h6 class="fontWeight400">Design Research</h6>
-                </a>
-                <h6>In-depth Analysis for Targeted Solutions</h6>
-                <div class="blankHXXS"></div>
-                <a href="/">
-                  <h6 class="fontWeight400">Web Development</h6>
-                </a>
-                <h6>Seamless Design Implementation</h6>
-                <div class="blankHXXS"></div>
-                <a href="/">
-                  <h6 class="fontWeight400">Branding</h6>
-                </a>
-                <h6>Crafting Memorable Brand Identities</h6>
-              </div>
-
-              <div class="Grid-cell">
-                <h5> <strong> About </strong> </h5>
-                <div class="blankHXXS"></div>
-
-                <a href="/about">
-                  <h6>About me</h6>
-                </a>
-                <a href="mailto:vickyw.design@gmail.com">
-                  <h6>Email me</h6>
-                </a>
-              </div>
-            </div>
-
-          </div>
-        </div>
-      </div>
-      <div class="blankHS"></div>
-      <div class="Grid Grid--full Grid--gutters">
-        <div class="Grid-cell">
-          <div class="footerBorder">
-            <div class="element">
-              <h5 class="Grey700"> &#169; 2023 &#8212; vickywang.me | All rights reserved.</h5>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-
-  </footer>
-  <!--footer-->
 </body>
 
 
