--- a/templates/architecture/the_rotation_of_curves/index.ejs
+++ b/templates/architecture/the_rotation_of_curves/index.ejs
@@ -1,116 +1,16 @@
 <html>
-
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-  <title>Vicky W. | UX Designer | The rotation of curves</title>
-  <meta name="keywords"
-    content="Vicky Wang, Product Design, Product Designer, UI/UX Designer, Designer, Architecture, Architect, San Francisco, UC Berkeley">
-  <meta name="author" content="Vicky Wang">
-  <link rel="stylesheet" href="../../main.css">
-  <script type="text/javascript" src="../../scripts.js"></script>
-
-
-  <link
-    href="https://fonts.googleapis.com/css2?family=Titillium+Web:ital,wght@0,200;0,300;0,400;0,600;0,700;0,900;1,200;1,300;1,400;1,600;1,700&display=swap"
-    rel="stylesheet">
-  <!--font     font-family: 'Titillium Web', sans-serif; -->
-
-  <link
-    href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
-    rel="stylesheet">
-  <!--font     font-family: 'Roboto', sans-serif; -->
-
-  <link href="https://fonts.googleapis.com/css2?family=Train+One&display=swap" rel="stylesheet">
-  <!--font using hello-->
-  <link href="https://fonts.googleapis.com/css2?family=Catamaran:wght@100;200;300;400;500;600;700;800;900&display=swap"
-    rel="stylesheet">
-  <!--font     font-family: 'Catamaran', sans-serif; -->
-  <link
-    href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap"
-    rel="stylesheet">
-  <!--font font-family: 'Lato', sans-serif; -->
-
-  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet">
-  <!--font awesome -->
-
-
-
-
-
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/4.1.1/crypto-js.min.js"
-    integrity="sha512-E8QSvWZ0eCLGk4km3hxSsNmGWbLtSCSUcewDQPQWZF6pEU8GlT8a5fF32wOl1i8ftdMhssTrF/OhyGWwonTcXA=="
-    crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-  <!-- crypto js -->
-
-  <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-  <!--jQuery-->
-  <script type="text/javascript" src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-  <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-  <!--aos-->
-  <script type="text/javascript" src="https://assets.codepen.io/16327/gsap-latest-beta.min.js"></script>
-  <!-- gsap -tool-bar-->
-  <script type="text/javascript" src="https://assets.codepen.io/16327/ScrollTrigger.min.js?v=40"></script>
-  <!-- gsap - tool-bar-->
-
-  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.6.1/gsap.min.js"></script>
-  <!-- gsap - ScrollTrigger-->
-  <script type="text/javascript" src="https://unpkg.com/gsap@3/dist/ScrollTrigger.min.js"></script>
-  <!-- gsap - ScrollTrigger-->
-
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-E8YXDWJST2"></script>
-  <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag() { dataLayer.push(arguments); }
-    gtag('js', new Date());
-
-    gtag('config', 'G-E8YXDWJST2');
-  </script>
-  <!-- Global site tag (gtag.js) - Google Analytics -->
-
-
-</head>
+<!--Head-->
+<%- include(`${templatePath}/shared/head`, {SEO:true, Title:'The Rotation of Curves: Architectural Elegance in Fluid Design', 
+  description:'This project explores the dynamic use of curved forms, rotating them to create spatial intrigue and structural sophistication. The design emphasizes seamless flow and continuity, challenging conventional architectural boundaries. Experience this innovative approach to design, where curves are not just aesthetic elements but integral to the functional and experiential aspects of the structure.', 
+  pageURL:'architecture/the_rotation_of_curves/', thumbnailImgURL: 'vickywang_web.png'
+  }) %>
+<!--Head-->
 
 <body>
-  <!--progressBarScroll-->
-  <div class="progressContainer">
-    <div class="progress-container">
-      <div class="progress-bar" id="progressBar"></div>
-    </div>
-  </div>
-  <!--progressBarScroll-->
-  <!-- header -->
-  <header>
-    <nav class="header" id="header">
-      <div class="backgroundColorNav">
-        <a href="http://vickywang.me/"><img class="logo pointer" src="../../icon/LOGO.svg" alt="VW"
-            title="vickywang.me"></a>
-        <div class="navbar">
-          <ul class="nav-menu">
-            <li class="nav-item inactive marginZero"><a href="/" class="nav-link box">PROJECT</a>
-            </li>
-            <li class="nav-item active activeNav marginZero"><a href="/architecture"
-                class="nav-link box">ARCHITECTURE</a>
-            </li>
-            <li class="nav-item inactive marginZero"><a href="/photography" class="nav-link box">PHOTOGRAPHY</a>
-            </li>
-            <li class="nav-item inactive marginZero"><a href="/about" class="nav-link box ">ABOUT</a>
-            </li>
-          </ul>
-        </div>
-        <div class="hamburger">
-          <span class="bar"></span>
-          <span class="bar"></span>
-          <span class="bar"></span>
-        </div>
-      </div>
-    </nav>
-  </header>
-  <!-- header -->
-
+  <%- include(`${templatePath}/shared/progressBar`) %>
+  <%- include(`${templatePath}/shared/block_nav_header`, {type:'main', currentPage: 'ARCHITECTURE' }) %>
   <div class="blankHL"></div>
+
   <!-- cover -->
   <div class="wrapper">
     <div class="Grid Grid--gutters Grid--cols-2 Grid--center">
@@ -129,7 +29,6 @@
           <h6><strong>Duration: </strong> <span class="textItalic">&nbsp;Fall 2015 | 1
               Semester</span> </h6>
           <h6> <strong>Project:</strong> &nbsp;Summer Program, CED, UC Berkeley</h6>
-          <h6> <strong>Site:</strong> &nbsp; - </h6>
           <h6> <strong>Instructor:</strong> &nbsp; Rudabeh Pakravan</h6>
         </div>
       </div>
@@ -137,17 +36,8 @@
     </div>
   </div>
   <!-- cover -->
-  <div class="blankHL"></div>
-  <!-- Arrow -->
-  <div class="Grid Grid--full Grid--gutters wrapper">
-    <div class="Grid-cell">
-      <div class="element">
-        <h2 class="tArrow"> PART 1 THE ISLAND <img class="seArrow" src="../../icon/arrow-se.svg" alt="icon arrow">
-        </h2>
-      </div>
-    </div>
-  </div>
-  <!-- Arrow -->
+
+  <%- include(`${templatePath}/shared/comp_content_subtitle_arrow`, {message: 'PART 1 THE ISLAND' }) %>
 
   <div class="blankHS"></div>
 
@@ -192,17 +82,9 @@
   <div class="blankHM"></div>
   <hr>
   <div class="blankHM"></div>
+  <%- include(`${templatePath}/shared/comp_content_subtitle_arrow`, {message: 'PART 2 THE FOAME' }) %>
 
-  <!-- Arrow -->
-  <div class="Grid Grid--full Grid--gutters wrapper">
-    <div class="Grid-cell">
-      <div class="element">
-        <h2 class="tArrow"> PART 2 THE FOAME <img class="seArrow" src="../../icon/arrow-se.svg" alt="icon arrow">
-        </h2>
-      </div>
-    </div>
-  </div>
-  <!-- Arrow -->
+
   <div class="blankHM"></div>
   <!--foam-->
   <div class="wrapper">
@@ -273,16 +155,8 @@
   <div class="blankHM"></div>
   <hr>
   <div class="blankHM"></div>
-  <!-- Arrow -->
-  <div class="Grid Grid--full Grid--gutters wrapper">
-    <div class="Grid-cell">
-      <div class="element">
-        <h2 class="tArrow"> PART 3 THE HOUSE <img class="seArrow" src="../../icon/arrow-se.svg" alt="icon arrow">
-        </h2>
-      </div>
-    </div>
-  </div>
-  <!-- Arrow -->
+ 
+  <%- include(`${templatePath}/shared/comp_content_subtitle_arrow`, {message: 'PART 3 THE HOUSE' }) %>
 
   <div class="blankHL"></div>
 
@@ -372,159 +246,18 @@
     </div>
   </div>
   <!--renders -->
-  <div class="blankHL"></div>
 
-  <!-- message -->
-  <div class="Grid Grid--full Grid--gutters u-textCenter">
-    <div class="Grid-cell">
-      <div data-aos="fade-up">
-        <h4 class="element">
-          Thank You for Visiting &#33; Check back soon for more updates and stay tuned &#33;
-        </h4>
-      </div>
-      <a href="/" class=""><img class="widthXS" src="../../icon/LOGOtxt.svg" alt="VW" title="vickywang.me"></a>
-    </div>
-  </div>
-
-  <!-- message -->
-  <div class="blankHL"></div>
-
-  <!--back to top-->
-  <button id="myBtn" title="Back to top">
-    <div id="dad">
-      <div id="bro">
-        <img id="bottom-arrow" class="" src="../../icon/arrow-top.svg" alt="back to top">
-      </div>
-      <div id="sis">
-        <h4>TOP</h4>
-      </div>
-    </div>
-  </button>
-  <!--back to top-->
+  <!-- Shared across the platform -->
+  <%- include(`${templatePath}/shared/comp_content_subtitle_arrow`, {message: 'Skills & Experiences' }) %>
+  <%- include(`${templatePath}/shared/comp_tagCloud`) %>
+  <%- include(`${templatePath}/shared/comp_closingMessage`, { version: 'addMessage', message: `Thank You for Visiting! please <a class="textUnderline" href="mailto:vickyw.design@gmail.com">email</a> me
+  about professional projects.`}) %>
 
 
-  <!--footer-->
-  <footer class="GreyBg100">
 
-    <div class="blankHS"></div>
-    <div class="wrapper">
-      <div class="element">
-
-        <div class="Grid Grid--gutters Grid--1of3">
-          <div class="Grid-cell">
-
-            <a href="/" class=""><img class="widthXXS" src="../../icon/LOGOtxt.svg" alt="VW" title="vickywang.me"></a>
-            <div class="blankHXS"></div>
-
-            <div class="Grid Grid--gutters">
-              <div class="ClipboardBoxIconOnly">
-                <button class="ClipboardIconOnly">
-                  <img title="Copy Email Address to Clipboard" class="iconS hoverGrey300 paddingS borderRadiusMax"
-                    title="Copy to Clipboard" src="../../icon/mail.svg" alt="LinkedIn">
-                  <p class="clickIconCopy">vickyw.design@gmail.com</p>
-                </button>
-              </div>
-              <a target="_blank" href="https://www.linkedin.com/in/vicky-wyq/" title="LinkedIn">
-                <img class="iconS hoverGrey300 paddingS borderRadiusMax" src="../../icon/in.svg" alt="LinkedIn">
-              </a>
-
-              <a target="_blank" href="https://github.com/vicky-wyq">
-                <img class="iconS hoverGrey300 paddingS borderRadiusMax" src="../../icon/git.svg" alt="GitHub"
-                  title="GitHub">
-              </a>
-
-              <a target="_blank" href="https://codepen.io/vicky-wyq" title="CodePen">
-                <img class="iconS hoverGrey300 paddingS borderRadiusMax" src="../../icon/Codepen.svg" alt="CodePen">
-              </a>
-
-              <a target="_blank" href="https://www.instagram.com/vw_yiqi/">
-                <img class="iconS hoverGrey300 paddingS borderRadiusMax" src="../../icon/ins.svg" alt="Instagram"
-                  title="Instagram">
-              </a>
-            </div>
-            <div class="blankHXS"></div>
-          </div>
-          <div class="Grid-cell">
-            <div class="Grid Grid--gutters Grid--cols-6">
-              <div class="Grid-cell">
-                <h5> <strong> Project </strong> </h5>
-                <div class="blankHXXS"></div>
-                <a href="/glorify/">
-                  <h6 class="fontWeight400"> Glorify</h6>
-                </a>
-
-
-                <h6>Elevating Community Involvement</h6>
-                <div class="blankHXXS"></div>
-                <a href="/appointa/">
-                  <h6 class="fontWeight400"> APPOINTA</h6>
-
-                </a>
-                <h6>Simplifying Interview Coordination</h6>
-                <div class="blankHXXS"></div>
-                <a href="/seer/">
-                  <h6 class="fontWeight400">SEER</h6>
-
-                </a>
-                <h6>Empowering Brand Managers with Insights</h6>
-              </div>
-
-              <div class="Grid-cell">
-                <h5> <strong> Service </strong> </h5>
-                <div class="blankHXXS"></div>
-
-                <a href="/">
-                  <h6 class="fontWeight400">UX/UI Design</h6>
-                </a>
-                <h6>Creating Intuitive User Experiences</h6>
-                <div class="blankHXXS"></div>
-
-                <a href="/">
-                  <h6 class="fontWeight400">Design Research</h6>
-                </a>
-                <h6>In-depth Analysis for Targeted Solutions</h6>
-                <div class="blankHXXS"></div>
-                <a href="/">
-                  <h6 class="fontWeight400">Web Development</h6>
-                </a>
-                <h6>Seamless Design Implementation</h6>
-                <div class="blankHXXS"></div>
-                <a href="/">
-                  <h6 class="fontWeight400">Branding</h6>
-                </a>
-                <h6>Crafting Memorable Brand Identities</h6>
-              </div>
-
-              <div class="Grid-cell">
-                <h5> <strong> About </strong> </h5>
-                <div class="blankHXXS"></div>
-
-                <a href="/about">
-                  <h6>About me</h6>
-                </a>
-                <a href="mailto:vickyw.design@gmail.com">
-                  <h6>Email me</h6>
-                </a>
-              </div>
-            </div>
-
-          </div>
-        </div>
-      </div>
-      <div class="blankHS"></div>
-      <div class="Grid Grid--full Grid--gutters">
-        <div class="Grid-cell">
-          <div class="footerBorder">
-            <div class="element">
-              <h5 class="Grey700"> &#169; 2023 &#8212; vickywang.me | All rights reserved.</h5>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-
-  </footer>
-  <!--footer-->
+  <%- include(`${templatePath}/shared/comp_backTop`) %>
+  <%- include(`${templatePath}/shared/block_nav_footer`) %>
+  <!-- Shared across the platform -->
 
 </body>
 
