--- a/templates/architecture/thesis_studio/index.ejs
+++ b/templates/architecture/thesis_studio/index.ejs
@@ -1,134 +1,17 @@
 <!DOCTYPE html>
 <html>
-
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-
-  <meta name="title" content="Vicky W. | UX Designer | GLORIFY">
-  <title>Vicky W. | UX Designer | Thesis </title>
-  <link rel="canonical" href="https://vickywang.me/architecture/thesis_studio/">
-  <meta name="author" content="Vicky W.">
-
-  <!-- Basic Metadata -->
-  <meta name="keywords"
-    content="Vicky Wang, UX Design, User Experience Design, User interface Design, SaaS Design, B2B Booking Web Application, Business Booking, Payment Design, Team Member Management, Mobile Consumer Booking App Design, UC Berkeley">
-  <meta name="description" content="Vicky, a passionate UX designer, melds keen observation with an open-minded approach. Her designs transform challenges into intuitive experiences. Discover her unique perspective in her rich portfolio.
-  ">
-
-  <!-- Open Graph / Facebook -->
-  <meta property="og:locale" content="en_US">
-  <meta property="og:type" content="website">
-  <meta property='og:title' content="Vicky Wang | UX Designer | Thesis Studio" />
-  <meta property='og:description'
-    content='Hi! Thanks for stopping by. I enjoy design and code who loves solving challenging problems. Interested in what you see? Shoot me an email' />
-  <meta property='og:url' content="https://vickywang.me/architecture/thesis_studio/" />
-  <meta property="og:site_name" content="Vicky's Website">
-
-  <meta property='og:image' content="https://s3.us-west-1.amazonaws.com/vickywang.me/thumbnail_Glorify.jpg" />
-  <meta property="og:image:width" content="1200">
-  <meta property="og:image:height" content="627">
-  <meta property="og:image:type" content="image/jpeg">
-  <!-- linkedin -->
-  <meta name="twitter:card" content="summary" />
-  <meta name="twitter:site" content="@vickyw_design" />
-  <meta name="twitter:title" content="Vicky's Website" />
-  <meta name="twitter:description"
-    content="Vicky, a passionate UX designer, melds keen observation with an open-minded approach. Her designs transform challenges into intuitive experiences. Discover her unique perspective in her rich portfolio" />
-  <meta name="twitter:image" content="https://s3.us-west-1.amazonaws.com/vickywang.me/thumbnail_Glorify.jpg" />
-  <meta name="twitter:url" content="//vickywang.me/">
-  <meta name="twitter:creator" content="VICKY WANG" />
-  <!-- twitter -->
-  <link rel="apple-touch-icon" sizes="180x180" href="../apple-touch-icon.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="../favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="../favicon-16x16.png">
-  <link rel="manifest" href="../site.webmanifest">
-  <!-- favicon -->
+<!--Head-->
+<%- include(`${templatePath}/shared/head`, {SEO:true, Title:'Systems in Architecture: Exploring Continuity and Discontinuity in Design by Vicky Wang', 
+  description:'This thesis examines the dynamic interplay of continuity and discontinuity in architectural systems. Focusing on the spatial arrangement of elements and their impact on design, it explores how architects manipulate these concepts to create meaningful, harmonious structures.', 
+  pageURL:'thesis_studio', thumbnailImgURL: 'vickywang_web.png'
+  }) %>
+<!--Head-->
 
 
-  <link rel="stylesheet" href="../../main.css">
-  <script type="text/javascript" src="../../scripts.js"></script>
-
-
-  <link
-    href="https://fonts.googleapis.com/css2?family=Titillium+Web:ital,wght@0,200;0,300;0,400;0,600;0,700;0,900;1,200;1,300;1,400;1,600;1,700&display=swap"
-    rel="stylesheet">
-  <!--font     font-family: 'Titillium Web', sans-serif; -->
-
-  <link
-    href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
-    rel="stylesheet">
-  <!--font     font-family: 'Roboto', sans-serif; -->
-
-  <link href="https://fonts.googleapis.com/css2?family=Train+One&display=swap" rel="stylesheet">
-  <!--font using hello-->
-  <link href="https://fonts.googleapis.com/css2?family=Catamaran:wght@100;200;300;400;500;600;700;800;900&display=swap"
-    rel="stylesheet">
-  <!--font     font-family: 'Catamaran', sans-serif; -->
-  <link
-    href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap"
-    rel="stylesheet">
-  <!--font font-family: 'Lato', sans-serif; -->
-
-  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet">
-  <!--font awesome -->
-
-
-
-
-
-  <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag() { dataLayer.push(arguments); }
-    gtag('js', new Date());
-
-    gtag('config', 'G-E8YXDWJST2');
-  </script>
-  <!-- Global site tag (gtag.js) - Google Analytics -->
-
-
-
-
-</head>
 
 <body>
-  <!--progressBarScroll-->
-  <div class="progressContainer">
-    <div class="progress-container">
-      <div class="progress-bar" id="progressBar"></div>
-    </div>
-  </div>
-  <!--progressBarScroll-->
-  <!-- header -->
-  <header>
-    <nav class="header" id="header">
-      <div class="backgroundColorNav">
-        <a href="http://vickywang.me/"><img class="logo pointer" src="../../icon/LOGO.svg" alt="VW"
-            title="vickywang.me"></a>
-        <div class="navbar">
-          <ul class="nav-menu">
-            <li class="nav-item inactive marginZero"><a href="/" class="nav-link box">PROJECT</a>
-            </li>
-            <li class="nav-item active activeNav marginZero"><a href="/architecture"
-                class="nav-link box">ARCHITECTURE</a>
-            </li>
-            <li class="nav-item inactive marginZero"><a href="/photography" class="nav-link box">PHOTOGRAPHY</a>
-            </li>
-            <li class="nav-item inactive marginZero"><a href="/about" class="nav-link box ">ABOUT</a>
-            </li>
-          </ul>
-        </div>
-        <div class="hamburger">
-          <span class="bar"></span>
-          <span class="bar"></span>
-          <span class="bar"></span>
-        </div>
-      </div>
-    </nav>
-  </header>
-  <!-- header -->
+  <%- include(`${templatePath}/shared/progressBar`) %>
+  <%- include(`${templatePath}/shared/block_nav_header`, {type:'main', currentPage: 'ARCHITECTURE' }) %>
   <div class="blankHXL"></div>
 
 
@@ -239,16 +122,8 @@
   <div class="blankHM"></div>
   <hr>
   <div class="blankHM"></div>
-  <!-- Arrow -->
-  <div class="Grid Grid--full Grid--gutters wrapper">
-    <div class="Grid-cell">
-      <div class="element">
-        <h2 class="tArrow"> ABSTRACT<img class="seArrow" src="../../icon/arrow-se.svg" alt="icon arrow">
-        </h2>
-      </div>
-    </div>
-  </div>
-  <!-- Arrow -->
+
+  <%- include(`${templatePath}/shared/comp_content_subtitle_arrow`, {message: 'Abstract' }) %>
 
   <div class="blankHM"></div>
 
@@ -294,16 +169,9 @@
   <hr>
 
   <div class="blankHM"></div>
-  <!-- Arrow -->
-  <div class="Grid Grid--full Grid--gutters wrapper">
-    <div class="Grid-cell">
-      <div class="element">
-        <h2 class="tArrow"> Operation Method<img class="seArrow" src="../../icon/arrow-se.svg" alt="icon arrow">
-        </h2>
-      </div>
-    </div>
-  </div>
-  <!-- Arrow -->
+
+  <%- include(`${templatePath}/shared/comp_content_subtitle_arrow`, {message: 'Operation Method' }) %>
+
   <!--Operation Method -->
   <div class="Grid Grid--full Grid--gutters wrapper">
     <div class="Grid-cell">
@@ -336,17 +204,9 @@
   <hr>
   <div class="blankHM"></div>
 
+  <%- include(`${templatePath}/shared/comp_content_subtitle_arrow`, {message: 'Case Study' }) %>
 
-  <!-- Arrow -->
-  <div class="Grid Grid--full Grid--gutters wrapper">
-    <div class="Grid-cell">
-      <div class="element">
-        <h2 class="tArrow"> Case Study<img class="seArrow" src="../../icon/arrow-se.svg" alt="icon arrow">
-        </h2>
-      </div>
-    </div>
-  </div>
-  <!-- Arrow -->
+
   <div class="blankHM"></div>
   <!--CaseStudy1 -->
   <div class="Grid Grid--full Grid--gutters wrapper">
@@ -428,17 +288,9 @@
   <hr>
   <div class="blankHM"></div>
 
+  <%- include(`${templatePath}/shared/comp_content_subtitle_arrow`, {message: 'Results of Manipulations' }) %>
 
-  <!-- Arrow -->
-  <div class="Grid Grid--full Grid--gutters wrapper">
-    <div class="Grid-cell">
-      <div class="element">
-        <h2 class="tArrow"> Results of Manipulations<img class="seArrow" src="../../icon/arrow-se.svg" alt="icon arrow">
-        </h2>
-      </div>
-    </div>
-  </div>
-  <!-- Arrow -->
+
   <div class="blankHM"></div>
 
   <!--manipulation -->
@@ -457,17 +309,9 @@
   <hr>
   <div class="blankHM"></div>
 
-  
-  <!-- Arrow -->
-  <div class="Grid Grid--full Grid--gutters wrapper">
-    <div class="Grid-cell">
-      <div class="element">
-        <h2 class="tArrow"> Architecture Projects<img class="seArrow" src="../../icon/arrow-se.svg" alt="icon arrow">
-        </h2>
-      </div>
-    </div>
-  </div>
-  <!-- Arrow -->
+  <%- include(`${templatePath}/shared/comp_content_subtitle_arrow`, {message: 'Architecture Projects' }) %>
+
+
   <div class="blankHM"></div>
   <!--project -->
   <div class="Grid Grid--full Grid--gutters wrapper">
@@ -522,9 +366,12 @@
       </h5>
       <div class="blankHXS"></div>
 
+
+
       <video width="100%" height="auto" controls autoplay>
         <source src="./anomation.mp4" type="video/mp4">
-      </video>
+        <track src="subtitles_en.vtt" kind="subtitles" srclang="en" label="English">
+    </video>
       <h6 class=" textItalic">a union of disparate systems</h6>
 
     </div>
@@ -533,17 +380,9 @@
   <div class="blankHM"></div>
   <hr>
   <div class="blankHM"></div>
+  <%- include(`${templatePath}/shared/comp_content_subtitle_arrow`, {message: 'Drawings of multiple scales' }) %>
 
-    <!-- Arrow -->
-    <div class="Grid Grid--full Grid--gutters">
-      <div class="Grid-cell">
-        <div class="element">
-          <h2 class="tArrow"> Drawings of multiple scales<img class="seArrow" src="../../icon/arrow-se.svg" alt="icon arrow">
-          </h2>
-        </div>
-      </div>
-    </div>
-    <!-- Arrow -->
+
   <div class="blankHM"></div>
 
   <!--drawing -->
@@ -627,16 +466,8 @@
   <div class="blankHM"></div>
   <hr>
   <div class="blankHM"></div>
-    <!-- Arrow -->
-    <div class="Grid Grid--full Grid--gutters">
-      <div class="Grid-cell">
-        <div class="element">
-          <h2 class="tArrow"> Photo Documentation<img class="seArrow" src="../../icon/arrow-se.svg" alt="icon arrow">
-          </h2>
-        </div>
-      </div>
-    </div>
-    <!-- Arrow -->
+
+    <%- include(`${templatePath}/shared/comp_content_subtitle_arrow`, {message: ' Photo Documentation' }) %>
 
   <div class="blankHM"></div>
 
@@ -693,158 +524,18 @@
 
 
 
-  <div class="blankHL"></div>
 
-  <!-- message -->
-  <div class="Grid Grid--full Grid--gutters u-textCenter">
-    <div class="Grid-cell">
-      <div data-aos="fade-up">
-        <h4 class="element">
-          Thank You for Visiting &#33; Check back soon for more updates and stay tuned &#33;
-        </h4>
-      </div>
-      <a href="/" class=""><img class="widthXS" src="../../icon/LOGOtxt.svg" alt="VW" title="vickywang.me"></a>
-    </div>
-  </div>
-
-  <!-- message -->
-  <div class="blankHL"></div>
-
-  <!--back to top-->
-  <button id="myBtn" title="Back to top">
-    <div id="dad">
-      <div id="bro">
-        <img id="bottom-arrow" class="" src="../../icon/arrow-top.svg" alt="back to top">
-      </div>
-      <div id="sis">
-        <h4>TOP</h4>
-      </div>
-    </div>
-  </button>
-  <!--back to top-->
-
-  <!--footer-->
-  <footer class="GreyBg100">
-
-    <div class="blankHS"></div>
-    <div class="wrapper">
-      <div class="element">
-
-        <div class="Grid Grid--gutters Grid--1of3">
-          <div class="Grid-cell">
-
-            <a href="/" class=""><img class="widthXXS" src="../../icon/LOGOtxt.svg" alt="VW" title="vickywang.me"></a>
-            <div class="blankHXS"></div>
-
-            <div class="Grid Grid--gutters">
-              <div class="ClipboardBoxIconOnly">
-                <button class="ClipboardIconOnly">
-                  <img title="Copy Email Address to Clipboard" class="iconS hoverGrey300 paddingS borderRadiusMax"
-                    title="Copy to Clipboard" src="../../icon/mail.svg" alt="LinkedIn">
-                  <p class="clickIconCopy">vickyw.design@gmail.com</p>
-                </button>
-              </div>
-              <a target="_blank" href="https://www.linkedin.com/in/vicky-wyq/" title="LinkedIn">
-                <img class="iconS hoverGrey300 paddingS borderRadiusMax" src="../../icon/in.svg" alt="LinkedIn">
-              </a>
-
-              <a target="_blank" href="https://github.com/vicky-wyq">
-                <img class="iconS hoverGrey300 paddingS borderRadiusMax" src="../../icon/git.svg" alt="GitHub"
-                  title="GitHub">
-              </a>
-
-              <a target="_blank" href="https://codepen.io/vicky-wyq" title="CodePen">
-                <img class="iconS hoverGrey300 paddingS borderRadiusMax" src="../../icon/Codepen.svg" alt="CodePen">
-              </a>
-
-              <a target="_blank" href="https://www.instagram.com/vw_yiqi/">
-                <img class="iconS hoverGrey300 paddingS borderRadiusMax" src="../../icon/ins.svg" alt="Instagram"
-                  title="Instagram">
-              </a>
-            </div>
-            <div class="blankHXS"></div>
-          </div>
-          <div class="Grid-cell">
-            <div class="Grid Grid--gutters Grid--cols-6">
-              <div class="Grid-cell">
-                <h5> <strong> Project </strong> </h5>
-                <div class="blankHXXS"></div>
-                <a href="/glorify/">
-                  <h6 class="fontWeight400"> Glorify</h6>
-                </a>
+  <!-- Shared across the platform -->
+  <%- include(`${templatePath}/shared/comp_content_subtitle_arrow`, {message: 'Skills & Experiences' }) %>
+  <%- include(`${templatePath}/shared/comp_tagCloud`) %>
+  <%- include(`${templatePath}/shared/comp_closingMessage`, { version: 'addMessage', message: `Thank You for Visiting! please <a class="textUnderline" href="mailto:vickyw.design@gmail.com">email</a> me
+  about professional projects.`}) %>
 
 
-                <h6>Elevating Community Involvement</h6>
-                <div class="blankHXXS"></div>
-                <a href="/appointa/">
-                  <h6 class="fontWeight400"> APPOINTA</h6>
 
-                </a>
-                <h6>Simplifying Interview Coordination</h6>
-                <div class="blankHXXS"></div>
-                <a href="/seer/">
-                  <h6 class="fontWeight400">SEER</h6>
-
-                </a>
-                <h6>Empowering Brand Managers with Insights</h6>
-              </div>
-
-              <div class="Grid-cell">
-                <h5> <strong> Service </strong> </h5>
-                <div class="blankHXXS"></div>
-
-                <a href="/">
-                  <h6 class="fontWeight400">UX/UI Design</h6>
-                </a>
-                <h6>Creating Intuitive User Experiences</h6>
-                <div class="blankHXXS"></div>
-
-                <a href="/">
-                  <h6 class="fontWeight400">Design Research</h6>
-                </a>
-                <h6>In-depth Analysis for Targeted Solutions</h6>
-                <div class="blankHXXS"></div>
-                <a href="/">
-                  <h6 class="fontWeight400">Web Development</h6>
-                </a>
-                <h6>Seamless Design Implementation</h6>
-                <div class="blankHXXS"></div>
-                <a href="/">
-                  <h6 class="fontWeight400">Branding</h6>
-                </a>
-                <h6>Crafting Memorable Brand Identities</h6>
-              </div>
-
-              <div class="Grid-cell">
-                <h5> <strong> About </strong> </h5>
-                <div class="blankHXXS"></div>
-
-                <a href="/about">
-                  <h6>About me</h6>
-                </a>
-                <a href="mailto:vickyw.design@gmail.com">
-                  <h6>Email me</h6>
-                </a>
-              </div>
-            </div>
-
-          </div>
-        </div>
-      </div>
-      <div class="blankHS"></div>
-      <div class="Grid Grid--full Grid--gutters">
-        <div class="Grid-cell">
-          <div class="footerBorder">
-            <div class="element">
-              <h5 class="Grey700"> &#169; 2023 &#8212; vickywang.me | All rights reserved.</h5>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-
-  </footer>
-  <!--footer-->
+  <%- include(`${templatePath}/shared/comp_backTop`) %>
+  <%- include(`${templatePath}/shared/block_nav_footer`) %>
+  <!-- Shared across the platform -->
 
 </body>
 
