--- a/templates/blog/index.ejs
+++ b/templates/blog/index.ejs
@@ -1,6 +1,6 @@
 <html lang="en">
 <!--Head-->
-<%- include('../shared/head', {SEO:true, Title:'Innovative UX Strategy & Web Development Insights - Blog by Vicky Wang', 
+<%- include(`${templatePath}/shared/head`, {SEO:true, Title:'Innovative UX Strategy & Web Development Insights - Blog by Vicky Wang', 
   description:'Vicky W. specializes in UX Design for B2B SaaS and consumer apps, expertly transforming complex challenges into user-friendly solutions.', 
   pageURL:'/blog', thumbnailImgURL: 'vickywang_web.png'
   }) %>
