--- a/templates/design_system/index.ejs
+++ b/templates/design_system/index.ejs
@@ -3,7 +3,7 @@
 <!--Head-->
 <%- include(`${templatePath}/shared/head`, {SEO:false, Title:'Scalable Design System Design and Implementation by Vicky Wang', 
 description:'Vicky W. specializes in UX Design for B2B SaaS and consumer apps, expertly transforming complex challenges into user-friendly solutions.', 
-pageURL:'/design_system/', thumbnailImgURL: 'vickywang_web.png'
+pageURL:'design_system', thumbnailImgURL: 'vickywang_web.png'
 }) %>
 <!--Head-->
 
