--- a/templates/shared/block_banner.ejs
+++ b/templates/shared/block_banner.ejs
@@ -7,20 +7,40 @@
   SlideDeckUrl = ''; 
 } 
 %>
+<% if (typeof bannerLogoUrl === 'undefined') { 
+  bannerLogoUrl = ''; 
+} 
+%>
+<% if (typeof bannerTitle === 'undefined') { 
+  bannerTitle = ''; 
+} 
+%>
+<% if (typeof bannerSubTitle === 'undefined') { 
+  bannerSubTitle = ''; 
+} 
+%>
+
   <div class="<%= bannerBgColor %>">
     <div class="blankPhone"></div>
     <div class="blankHS"></div>
     <div class="ProjectBanner displayLaptop">
       <div class="blankMin1880"></div>
-      <img src="<%- bannerMockupL %>" alt="APPOINTA">
-      <div class="ProjectBannerInner">
+      <img src="<%- bannerMockupL %>" alt="Mockup">
+      <div class="ProjectBannerInnerND">
+        <img class="widthXXS" src="<%- bannerLogoUrl %>" alt="Logo">
+        <h2><strong><%= bannerTitle %></strong> </h2>
+        <h3 class="Grid Grid--center colorBlack"><%= bannerSubTitle %></h3>
+
         <a href="<%= SlideDeckUrl %>" target="_blank"> <button class="button-35 <%= bannerButtonColor %>">Slide Decks</button></a>
       </div>
     </div>
     <div class="ProjectBanner displayTablet">
       <div class="blankMin1880"></div>
       <img class="displayTablet" src="<%- bannerMockupM %>" alt="APPOINTA">
-      <div class="ProjectBannerInner">
+      <div class="ProjectBannerInnerND">
+        <img class="widthXXS" src="<%- bannerLogoUrl %>" alt="Logo">
+        <h2><strong><%= bannerTitle %></strong> </h2>
+        <h3 class="Grid Grid--center colorBlack"><%= bannerSubTitle %></h3>
         <a href="<%= SlideDeckUrl %>" target="_blank"> <button class="button-35  <%= bannerButtonColor %>">Slide Decks</button></a>
         <div class="blankHXS"></div>
       </div>
@@ -28,9 +48,14 @@
     <div class="ProjectBanner displayPhone">
       <div class="blankMin1880"></div>
       <img class="displayPhone" src="<%- bannerMockupS %>" alt="APPOINTA">
-      <div class="ProjectBannerInner">
+      <div class="ProjectBannerInnerND">
+        <img class="widthXXS" src="<%- bannerLogoUrl %>" alt="Logo">
+        <h2><strong><%= bannerTitle %></strong> </h2>
+        <h3 class="Grid Grid--center colorBlack"><%= bannerSubTitle %></h3>
         <a href="<%= SlideDeckUrl %>" target="_blank"> <button class="button-35  <%= bannerButtonColor %>">Slide Decks</button></a>
         <div class="blankHXS"></div>
       </div>
     </div>
   </div>
+
+
