--- a/templates/architecture/index.ejs
+++ b/templates/architecture/index.ejs
@@ -2,7 +2,7 @@
 <html lang="en">
 <!--Head-->
 <%- include(`${templatePath}/shared/head`, {SEO:true, Title:'Architectural Innovation and Academic Exploration - Vicky Wang', 
-  description:' a showcase of innovative design projects from her M.Arch program, highlighting expertise in building form, spatial arrangement, and environmental considerations.', 
+  description:`A showcase of innovative design projects from her M.Arch program, highlighting expertise in building form, spatial arrangement, and environmental considerations.`, 
   pageURL:'architecture', thumbnailImgURL: 'vickywang_web.png'
   }) %>
 <!--Head-->
@@ -11,7 +11,7 @@
 <body>
   <%- include(`${templatePath}/shared/progressBar`) %>
   <%- include(`${templatePath}/shared/block_nav_header`, {type:'main', currentPage: 'ARCHITECTURE' }) %>
-  <div class="blankHL"></div>
+  <div class="blankHM"></div>
   <!--intro-->
   <div class="wrapper">
     <div class="element">
