--- a/templates/shared/block_cardnPassword.ejs
+++ b/templates/shared/block_cardnPassword.ejs
@@ -11,7 +11,7 @@
                   <h5>Password</h5>
                 </label>
 
-                <div class="row">
+                <div class="pwContainer">
                   <input class="<%= inputColor %> psJS" type="password" id="<%= cardPwID %>" placeholder="Enter password">
                   <button class="passwordArr" type="submit">
                     <img src="<%= websitePath %>/icon/arrow-forward.svg" alt="Enter">
