--- a/templates/design_system/index.ejs
+++ b/templates/design_system/index.ejs
@@ -2306,7 +2306,7 @@ pageURL:'design_system', thumbnailImgURL: 'vickywang_web.png'
                   <label for="password">
                     <h5>Password</h5>
                   </label>
-                  <div class="row">
+                  <div class="pwContainer">
                     <input class="PWinput" type="password" id="password" placeholder="Enter password">
                     <button class="passwordArr" type="submit">
                       <img src="../icon/arrow-forward.svg" alt="Enter">
