--- a/templates/design_system/index.ejs
+++ b/templates/design_system/index.ejs
@@ -2,7 +2,7 @@
 <html lang="en">
 <!--Head-->
 <%- include(`${templatePath}/shared/head`, {SEO:false, Title:'Scalable Design System Design and Implementation by Vicky Wang', 
-description:'Vicky W. specializes in UX Design for B2B SaaS and consumer apps, expertly transforming complex challenges into user-friendly solutions.', 
+description:`A comprehensive system that enhances the scalability and consistency of UX design. It serves as a practical guide for designing scalable, efficient, and cohesive user interfaces and experiences. `, 
 pageURL:'design_system', thumbnailImgURL: 'vickywang_web.png'
 }) %>
 <!--Head-->
