--- a/templates/index.ejs
+++ b/templates/index.ejs
@@ -111,27 +111,11 @@
       <%- include(`${templatePath}/shared/block_cardNoPassword`, {
         hoverBorderColor:``,
         cardNoPwURL:`${websitePath}/design_system/`,
-        cardNoPwImgURL:`${websitePath}/projectImages/vicky_website.svg`,
-        cardNoPwTitle: `Design & Iterate`, 
-        cardNoPwDescription:`Creating a design system to establish consistent branding and styling across the
-                entire website` 
+        cardNoPwImgURL:`${websitePath}/projectImages/vicky_website_short.svg`,
+        cardNoPwTitle: `Scalable Design System Design and Implementation`, 
+        cardNoPwDescription:`A comprehensive system that enhances the scalability and consistency of UX design. It serves as a practical guide for designing scalable, efficient, and cohesive user interfaces and experiences.` 
         }) %>
-      <%- include(`${templatePath}/shared/block_cardNoPassword`, {
-          hoverBorderColor:``,
-          cardNoPwURL:`${websitePath}/design_systemBYP/`,
-          cardNoPwImgURL:`${websitePath}/projectImages/vicky_website.svg`,
-          cardNoPwTitle: `Design & Iterate`, 
-          cardNoPwDescription:`Creating a design system to establish consistent branding and styling across the
-                  entire website` 
-          }) %>
-      <%- include(`${templatePath}/shared/block_cardNoPassword`, {
-            hoverBorderColor:``,
-            cardNoPwURL:`${websitePath}/design_systemLASO/`,
-            cardNoPwImgURL:`${websitePath}/projectImages/vicky_website.svg`,
-            cardNoPwTitle: `Design & Iterate`, 
-            cardNoPwDescription:`Creating a design system to establish consistent branding and styling across the
-                    entire website` 
-            }) %>
+
     </div>
   </div>
   <!-- Arrow -->
